attempt 4: got past creds issue but terraform directory incorrect, adding checkout action to create workspace

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,4 +28,4 @@ jobs:
     #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     #     AWS_DEFAULT_REGION: ap-southeast-2
       run: make
-      working-directory: ./terraform
+      working-directory: terraform
