--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ on:
 env:
   ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  REGION: ap-southeast-2
+  REGION: 'ap-southeast-2'
 
 name: Deploy to AWS
   
