--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,13 +18,6 @@ jobs:
     
     steps:
     
-    # - name: Configure AWS Credentials
-    #   uses: aws-actions/configure-aws-credentials@v1
-    #   with:
-    #     aws-access-key-id: $ACCESS_KEY_ID
-    #     aws-secret-access-key: $SECRET_ACCESS_KEY
-    #     aws-region: $REGION
-    
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -42,3 +35,16 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+    
+    - name: Build and push image to ECR Repo
+      id: build-image
+      env:
+        #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPO: ${{ aws ssm get-parameter --name /ben-tech-challenge/local/ecr-url --output text --query Parameter.Value }}
+        #HASH: ${{ git rev-parse --long HEAD }}
+        VERSION_TAG: ${{ git describe --tags }}
+      working-directory: ./app
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPO:$VERSION_TAG .
+        docker push $ECR_REPO:$VERSION_TAG
+        echo "::set-output name=image::$ECR_REPO:$VERSION_TAG"
