--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,6 +28,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
+    - name: build
+      env:
+        DOCKER_USER:  ${{ secrets.DOCKER_USER }}
+        DOCKER_PASSWORD:  ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+        docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
+        
+    
     - name: Deploy Terraform
       run: make
       working-directory: ./terraform
