--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,28 +32,33 @@ jobs:
       env:
         DOCKER_USER:  ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD:  ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
-        
-    
-    - name: Deploy Terraform
-      run: make
-      working-directory: ./terraform
-    
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-    
-    - name: Build and push image to ECR Repo
-      id: build-image
-      # env:
-      #   #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #   #ECR_REPO: "${{ aws ssm get-parameter --name /ben-tech-challenge/local/ecr-url --output text --query Parameter.Value }}"
-      #   ECR_REPO: '${{ steps.login-ecr.outputs.registry }}/ben-tech-challenge-local-repo'
-      #   #HASH: ${{ git rev-parse --long HEAD }}
-      #   VERSION_TAG: v1.1-16-g8f28fd3 #${{ git describe --tags }}
+        DOCKER_REPO: "nichichi/btc-repo"
       working-directory: ./app
       run: |
-        docker build -t ben-tech-challenge-local-repo .
-        docker tag ben-tech-challenge-local-repo:latest 806134853709.dkr.ecr.ap-southeast-2.amazonaws.com/ben-tech-challenge-local-repo:latest
-        docker push 806134853709.dkr.ecr.ap-southeast-2.amazonaws.com/ben-tech-challenge-local-repo:latest
+        docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
+        export SHA=$(git describe --tags --long)
+        docker build -t nichichi/btc-repo:$SHA .
+        docker push nichichi/btc-repo:$SHA
+        
+    
+    # - name: Deploy Terraform
+    #   run: make
+    #   working-directory: ./terraform
+    
+    # - name: Login to Amazon ECR
+    #   id: login-ecr
+    #   uses: aws-actions/amazon-ecr-login@v1
+    
+    # - name: Build and push image to ECR Repo
+    #   id: build-image
+    #   # env:
+    #   #   #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+    #   #   #ECR_REPO: "${{ aws ssm get-parameter --name /ben-tech-challenge/local/ecr-url --output text --query Parameter.Value }}"
+    #   #   ECR_REPO: '${{ steps.login-ecr.outputs.registry }}/ben-tech-challenge-local-repo'
+    #   #   #HASH: ${{ git rev-parse --long HEAD }}
+    #   #   VERSION_TAG: v1.1-16-g8f28fd3 #${{ git describe --tags }}
+    #   working-directory: ./app
+    #   run: |
+    #     docker build -t ben-tech-challenge-local-repo .
+    #     docker tag ben-tech-challenge-local-repo:latest 806134853709.dkr.ecr.ap-southeast-2.amazonaws.com/ben-tech-challenge-local-repo:latest
+    #     docker push 806134853709.dkr.ecr.ap-southeast-2.amazonaws.com/ben-tech-challenge-local-repo:latest
