--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,6 +28,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
+    - name: Set vars
+      id: vars
+      run: echo "::set-output name=VERSION_TAG::$(git describe --tags --long)"
+    
     - name: build
       env:
         DOCKER_USER:  ${{ secrets.DOCKER_USER }}
@@ -36,8 +40,9 @@ jobs:
       working-directory: ./app
       run: |
         docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
-        bash -x ../scripts/build.sh
-    
+        docker build -t $DOCKER_REPO:${{ steps.vars.outputs.VERSION_TAG }} .
+        docker push $DOCKER_REPO:${{ steps.vars.outputs.VERSION_TAG }}
+        
     # - name: Deploy Terraform
     #   run: make
     #   working-directory: ./terraform
