--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,7 +40,7 @@ jobs:
       working-directory: ./app
       run: |
         docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
-        echo ${{ steps.vars.outputs.VERSION_TAG }}
+        echo ${GITHUB_SHA::7}
         docker build -t $DOCKER_REPO:${{ steps.vars.outputs.VERSION_TAG }} .
         docker push $DOCKER_REPO:${{ steps.vars.outputs.VERSION_TAG }}
         
