--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,9 +40,8 @@ jobs:
       working-directory: ./app
       run: |
         docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
-        echo ${GITHUB_SHA::7}
-        docker build -t $DOCKER_REPO:${{ steps.vars.outputs.VERSION_TAG }} .
-        docker push $DOCKER_REPO:${{ steps.vars.outputs.VERSION_TAG }}
+        docker build -t $DOCKER_REPO:${GITHUB_SHA::7} .
+        docker push $DOCKER_REPO:${GITHUB_SHA::7}
         
     # - name: Deploy Terraform
     #   run: make
