fixed dash v underscore

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,7 +42,7 @@ jobs:
         docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
         docker build -t $DOCKER_REPO:${GITHUB_SHA::7} .
         docker push $DOCKER_REPO:${GITHUB_SHA::7}
-        sed 's|{image}:|{image}:'"${GITHUB_SHA::7}"'|g' ../terraform/td_template.json > ../terraform/task_definition.json
+        sed 's|{image}:|{image}:'"${GITHUB_SHA::7}"'|g' ../terraform/td-template.json > ../terraform/task_definition.json
         
     # - name: Deploy Terraform
     #   run: make
