--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,24 +44,6 @@ jobs:
         docker push $DOCKER_REPO:${GITHUB_SHA::7}
         sed 's|{image}:|{image}:'"${GITHUB_SHA::7}"'|g' ../terraform/td-template.json > ../terraform/task_definition.json
         
-    # - name: Deploy Terraform
-    #   run: make
-    #   working-directory: ./terraform
-    
-    # - name: Login to Amazon ECR
-    #   id: login-ecr
-    #   uses: aws-actions/amazon-ecr-login@v1
-    
-    # - name: Build and push image to ECR Repo
-    #   id: build-image
-    #   # env:
-    #   #   #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-    #   #   #ECR_REPO: "${{ aws ssm get-parameter --name /ben-tech-challenge/local/ecr-url --output text --query Parameter.Value }}"
-    #   #   ECR_REPO: '${{ steps.login-ecr.outputs.registry }}/ben-tech-challenge-local-repo'
-    #   #   #HASH: ${{ git rev-parse --long HEAD }}
-    #   #   VERSION_TAG: v1.1-16-g8f28fd3 #${{ git describe --tags }}
-    #   working-directory: ./app
-    #   run: |
-    #     docker build -t ben-tech-challenge-local-repo .
-    #     docker tag ben-tech-challenge-local-repo:latest 806134853709.dkr.ecr.ap-southeast-2.amazonaws.com/ben-tech-challenge-local-repo:latest
-    #     docker push 806134853709.dkr.ecr.ap-southeast-2.amazonaws.com/ben-tech-challenge-local-repo:latest
+    - name: Deploy Terraform
+      run: make
+      working-directory: ./terraform
