updating task definition to use vars for port cpu and memoy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,7 @@ on:
 env:
   APPNAME: "ben-tech-challenge"
   DOCKER_REPO: "nichichi/btc-repo"
+  PORT: 80
 
 name: Deploy to AWS
   
@@ -40,7 +41,7 @@ jobs:
       working-directory: ./app
       run: |
         docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
-        docker build -t $DOCKER_REPO:${GITHUB_SHA::7} . --build-arg SHA=${GITHUB_SHA::7} --build-arg APPNAME=$APPNAME --build-arg VERSION=${{ steps.vars.outputs.VERSION_TAG }}
+        docker build -t $DOCKER_REPO:${GITHUB_SHA::7} . --build-arg SHA=${GITHUB_SHA::7} --build-arg APPNAME=$APPNAME --build-arg VERSION=${{ steps.vars.outputs.VERSION_TAG }} --build-arg PORT=$PORT
         docker push $DOCKER_REPO:${GITHUB_SHA::7}
         sed 's|{image}:|{image}:'"${GITHUB_SHA::7}"'|g' ../terraform/td-template.json > ../terraform/task_definition.json
         
