added path filter for automated deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,10 @@ on:
     branches:
       - main
       - feature-ecr-ecs
+    paths:
+      - ./app/**
+      - ./terraform/**
+      - ./github/workflows/deploy.yaml
     
 env:
   APPNAME: "ben-tech-challenge"
