--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,9 +4,9 @@ on:
       - main
       - feature-ecr-ecs
     paths:
-      - './app/**'
-      - './terraform/**'
-      - './.github/workflows/deploy.yaml'
+      - 'app/**'
+      - 'terraform/**'
+      - '.github/workflows/deploy.yaml'
     
 env:
   APPNAME: "ben-tech-challenge"
