--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ on:
     
 env:
   APPNAME: "ben-tech-challenge"
-  DOCKER_REPO: "nichichi/btc-repo"
+  DOCKER_REPO: "starkmatt/make01"
   PORT: 80
 
 name: Deploy to AWS
